--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $clr-bg-main: #f1eade;
 $clr-bg-frame: #f9f4ef;
 $clr-bg-card: #f9f4ef;
 
-$clr-primary: #779776;
+$clr-primary: #93ae93;
 $clr-primary-hover: #5c845a;
 $clr-primary-disabled: #b6c4b5;
 $clr-secondary: #f5d283;
@@ -14,8 +14,9 @@ $clr-danger: #9c4b4b;
 $clr-danger-hover: #8c3636;
 
 $clr-font-light: #ceccc9;
-$clr-font-dark: #2d3e46;
+$clr-font-dark: #1c1c1c;
 $clr-font-disabled: rgba(45, 62, 70, 0.7);
+$clr-font-mute: #485460;
 
 $clr-accent: #e7c15c;
 $clr-focus: #112531;
